src/test/deca/context/invalid/created/double-decl.deca
//Description:
//    test overflow error
//
// Resultats:
//    Error: Overflow during arithmetic operation
// 
// Historique:
//    cree le 01/01/2022
{
    int a;
    int a;
}